create navbar, sidebar and UI for Patients. Also the  filter, pagination and sort.

--- a/Client/src/app/app.component.scss
+++ b/Client/src/app/app.component.scss
@@ -1,8 +1,25 @@
 
-img {
-    border-radius: 68% 32% 63% 37% / 35% 51% 49% 65%;
-    margin-top: 200px;
-    width: 550px;
-    height: 422px;
-}
+// img {
+//     border-radius: 68% 32% 63% 37% / 35% 51% 49% 65%;
+//     margin-top: 200px;
+//     width: 550px;
+//     height: 422px;
+// }
 
+
+.container-fluid {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  
+  .main-content {
+    padding: 15px;
+  }
+  
+  /* Customize your styles here */
+  
