--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,11 +1,5 @@
-<app-nav-bar></app-nav-bar>
+<!-- <app-nav-bar></app-nav-bar> -->
 
-<div class="container" style="margin-top: 140px;">
-    <h1>Hello doctor {{title}}</h1>
-
-    <ul>
-        <li class="list-unstyled" *ngFor="let patient of patients">
-            {{patient.patientName}} - {{patient.dob | date}}
-        </li>
-    </ul>
+<div class="">
+    <app-patient></app-patient>
 </div>
