Created patient details and hom page components, and routes

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-nav-bar></app-nav-bar> -->
 
 <div class="">
-    <app-patient></app-patient>
+    <router-outlet></router-outlet>
 </div>
