--- a/Client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/Client/src/app/core/nav-bar/nav-bar.component.scss
@@ -1,8 +1,12 @@
-// .nav-item {
-//     margin: 15px;
-//     list-style-type: none;
-// }
-// a{
-//     text-decoration: none;
-// }
+.nav-item {
+    margin: 1px;
+    list-style-type: none;
+}
 
+a{
+    text-decoration: none;
+}
+
+li{
+    margin: 15px;
+}
