--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -6,13 +6,16 @@
             </a>
             <ul class="d-flex navbar me-auto m-2">
                 <li class="nav-item m-2">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" routerLink="/" href="#">Home</a>
                 </li>
                 <li class="nav-item m-2">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item m-2">
                     <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item m-2" >
+                    <a class="nav-link" routerLink="/test-error" href="#">Error</a>
                 </li>
             </ul>
         </div>
