--- a/Client/src/app/home-page/home-page.component.html
+++ b/Client/src/app/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
+<!-- <app-nav-bar></app-nav-bar> -->
 
 <div class="home" style="margin-top: 150px;">
     <p>home-page works!</p>
