--- a/Client/src/app/patient/patient-details/patient-details.component.html
+++ b/Client/src/app/patient/patient-details/patient-details.component.html
@@ -1,5 +1,4 @@
-<app-nav-bar-docheader></app-nav-bar-docheader>
-<div class="container-fluid">
+<div class="section">
 
     <div class="action">
         <div class="back">
@@ -41,7 +40,6 @@
                 <div class="card" (click)="viewAllAppointments()">
                     <div class="header">
                         <p>Appointments</p>
-
                     </div>
                     <div class="body">
                         <div *ngFor="let appointment of appointment; index as i">
