--- a/Client/src/app/core/nav-bar-docheader/nav-bar-docheader.component.scss
+++ b/Client/src/app/core/nav-bar-docheader/nav-bar-docheader.component.scss
@@ -1,9 +1,41 @@
-.title {
-    background-color: #fff;
-    padding: 10px;
+mat-toolbar {
+    position: relative;
+    z-index: 3;
+    box-shadow: none;
+    background-color: #ffffff;
+    border-bottom: 1px solid #e1e1e1;
 
-    p {
-        margin-top: 10px;
-        font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    a {
+        text-decoration: none;
+        font-size: 16px;
     }
+
+    li {
+        list-style: none;
+    }
+
+    .users {
+        margin-left: auto;
+    }
+
+}
+
+mat-sidenav-container {
+    height: calc(100vh - 64px);
+    background-color: #fff;
+}
+
+mat-sidenav,
+mat-sidenav-content {
+    transition: all 500ms ease-in-out;
+    background-color: #fff;
+
+}
+
+mat-sidenav-content {
+    background-color: #f5f5f5;
 }
