--- a/Client/src/app/core/side-bars/side-bars.component.html
+++ b/Client/src/app/core/side-bars/side-bars.component.html
@@ -1,60 +1,32 @@
 
-<div class="sidebar d-flex flex-column">
 
-  <div class="logo">
-    <a href="">
-      <img src="../../../assets/images/Logo.png" alt="" width="150px" routerLink="/">
-    </a>
+<div class="sidenav-header">
+  <img [width]="profilePicSize()" [height]="profilePicSize()" src="/assets/images/profile.jpg" />
+  <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
+      <h2>Dr</h2>
+      <p>Andder Frias</p>
   </div>
-
-  <ul class="nav flex-column mt-3">
-
-
-    <li class="nav-item">
-      <a routerLink="/" class="nav-link" aria-current="page" data-bs-toggle="tooltip" data-bs-placement="right"
-        title="Dashboard">
-        <div class="box">
-          <i class="bi bi-house"><span>Dashboard</span></i>
-        </div>
-      </a>
-    </li>
-
-    <li class="nav-item">
-      <a routerLink="/patient" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="right" title="Patient management">
-        <div class="box">
-          <i class="bi bi-person "><span>Patients</span></i>
-        </div>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " data-bs-toggle="tooltip" data-bs-placement="right" title="Appointment">
-        <div class="box">
-          <i class="bi bi-calendar-event"><span>Appointments</span></i>
-        </div>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " data-bs-toggle="tooltip" data-bs-placement="right" title="Surgery">
-        <div class="box">
-          <i class="bi bi-scissors"><span>Surjeries</span></i>
-        </div>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " data-bs-toggle="tooltip" data-bs-placement="right" title="Notes">
-        <div class="box">
-          <i class="bi bi-journal-plus"><span>Notes</span></i>
-        </div>
-      </a>
-    </li>
-  </ul>
-
-  <div class="mt-auto d-flex justify-content-center" >
-    <a class="nav-link" data-bs-toggle="tooltip" data-bs-placement="right" title="Logout">
-      <div class="logout mb-4">
-        <i class="bi bi-box-arrow-right"><span>Logout</span></i>
-      </div>
-    </a>
-  </div>
-
 </div>
+
+<mat-nav-list>
+  <a
+    mat-list-item
+    class="menu-item"
+    *ngFor="let item of menuItems()"
+    [routerLink]="item.route"
+    routerLinkActive="selected-menu-item"
+    #rla="routerLinkActive"
+    [activated]="rla.isActive"
+  >
+    <mat-icon
+      [fontSet]="
+        rla.isActive ? 'material-icons' : 'material-icons-outlined'
+      "
+      matListItemIcon
+      >{{ item.icon }}</mat-icon
+    >
+    <span matListItemTitle *ngIf="!sideNavCollapsed()">{{
+      item.label
+    }}</span>
+  </a>
+</mat-nav-list>
