--- a/Client/src/app/patient/patient-details/patient-details.component.scss
+++ b/Client/src/app/patient/patient-details/patient-details.component.scss
@@ -1,5 +1,6 @@
-.container-fluid {
-    background-color: #E9EEFC;
+.section {
+    background-color: #f5f5f5;
+    padding: 10px;
 
     .action {
         display: flex;
@@ -53,7 +54,7 @@
                     justify-content: space-between;
 
                     p {
-                        font-size: 25px;
+                        font-size: 20px;
                         font-weight: 400;
                     }
 
@@ -61,20 +62,32 @@
                         border: none;
                         background-color: #ACE40B;
                         color: #fff;
-                        padding: 5px 20px;
+                        padding: 8px 20px;
                         border-radius: 8px;
                     }
                 }
 
                 .body {
+                    margin-top: 10px;
                     display: flex;
 
-                    .contact {
-                        margin-left: 100px;
+                    @media screen and (max-width: 840px) {
+                        margin-top: 10px;
+                        display: flex;
+                        flex-direction: column;
                     }
 
+                    .contact {
+                        margin-left: 50px;
+
+                        @media screen and (max-width: 840px) {
+                            margin-left: 0;
+                        }
+                    }
+
+
                     p {
-                        font-size: 18px;
+                        font-size: 16px;
                         font-weight: 300;
                     }
                 }
@@ -117,7 +130,8 @@
                         justify-content: space-between;
 
                         p {
-                            font-size: 25px;
+                            font-size: 20px;
+                            font-weight: 400;
                         }
 
                         .view {
