--- a/Client/src/app/patient/patient.component.html
+++ b/Client/src/app/patient/patient.component.html
@@ -1,54 +1,44 @@
+<div class="content-main">
 
-<!-- patient.component.html -->
-<div class="content">
-  <app-side-bars></app-side-bars>
+  <div class="header">
 
-  <div class="content-main">
-    <app-nav-bar-docheader></app-nav-bar-docheader>
+    <div class="patient">
+      <h1>Patients</h1>
+    </div>
 
-    <!-- Contenido principal -->
-    <div class="container-fluid">
-      <div class="patient">
-        <h1>Patients</h1>
-      </div>
-      <div class="box">
-        <app-paging-header
-          [totalCount]="totalCount"
-          [pageNumber]="patientParams.pageNumber"
-          [pageSize]="patientParams.pageSize"
-        ></app-paging-header>
+    <div class="box">
+      <app-paging-header [totalCount]="totalCount" [pageNumber]="patientParams.pageNumber"
+        [pageSize]="patientParams.pageSize"></app-paging-header>
 
-        <div class="box-search">
-          <div class="select">
-            <select class="form-select" (change)="onSortSelected($event)">
-              <option *ngFor="let sort of sortOptions" [value]="sort.value">
-                {{sort.name}}
-              </option>
-            </select>
-          </div>
-
-          <div class="search d-flex">
-            <input (keyup.enter)="onSearch()" type="text" class="form-control" #search>
-            <button class="btn search" (click)="onSearch()">Search</button>
-            <button class="btn reset" (click)="onReset()">Reset</button>
-          </div>
+      <div class="box-search">
+        <div class="select">
+          <select class="select" (change)="onSortSelected($event)">
+            <option *ngFor="let sort of sortOptions" [value]="sort.value">
+              {{sort.name}}
+            </option>
+          </select>
         </div>
-      </div>
 
-      <div class="cards mt-100">
-        <div class="card" *ngFor="let patient of patients">
-          <app-patient-item [patient]="patient"></app-patient-item>
+        <div class="search">
+          <input (keyup.enter)="onSearch()" type="text" class="" #search>
+          <button class="" (click)="onSearch()">Search</button>
+          <!-- <button class="btn reset" (click)="onReset()">Reset</button> -->
         </div>
-      </div>
-
-      <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-        <app-pagination 
-          [totalCount]="totalCount"
-          [pageSize]="patientParams.pageSize"
-          (pageChanged)="onPageChanged($event)"
-        ></app-pagination>
       </div>
 
     </div>
+
+  </div>
+
+
+  <div class="cards-box">
+    <div class="card-box" *ngFor="let patient of patients">
+      <app-patient-item [patient]="patient"></app-patient-item>
+    </div>
+  </div>
+
+  <div class="pagination" *ngIf="totalCount > 0">
+    <app-pagination [totalCount]="totalCount" [pageSize]="patientParams.pageSize"
+      (pageChanged)="onPageChanged($event)"></app-pagination>
   </div>
 </div>
