--- a/Client/src/app/patient/patient.component.scss
+++ b/Client/src/app/patient/patient.component.scss
@@ -1,53 +1,51 @@
-.content {
-  display: flex;
-  height: 100vh;
-}
+$breakpoint-desktop: 1300px;
+$breakpoint-tablet: 970px;
+$breakpoint-mobile: 480px;
 
 .content-main {
-  flex-grow: 1;
-  overflow-y: auto;
-  background-color: #E9EEFC;
+  height: 100vh;
+  // padding: 20px;
 
-  .container-fluid {
-    background-color: #E9EEFC;
+  .header {
+    background-color: #FFFFFF;
     padding: 20px;
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 
     h1 {
-      font-size: 45px;
+      font-size: 30px;
     }
 
     .box {
-      margin-top: 30px;
+      margin-top: 15px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      columns: 2;
 
-      @media (max-width: 1020px) {
+      @media (max-width: 1100px) {
         display: flex;
-        // align-items: start;
         flex-direction: column;
-      }
-
-      .page {
-
-        span,
-        strong {
-          font-size: 16px;
-        }
+        columns: 1;
       }
 
       .box-search {
         display: flex;
         gap: 10px;
+        columns: 2;
 
-        @media (max-width: 810px) {
+        @media (max-width: 890px) {
           display: flex;
-          // align-items: start;
           flex-direction: column;
         }
 
         .select {
           select {
+            padding: 8px 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #fff;
+            appearance: none;
+            width: 200px;
             cursor: pointer;
           }
         }
@@ -56,56 +54,65 @@
           display: flex;
           gap: 10px;
 
-          .btn {
-            background-color: #ffffff;
+          @media (max-width: 690px) {
+            display: flex;
+            flex-direction: column;
+          }
+
+          input {
+            border-radius: 5px;
+            border: 1px solid rgba(0, 0, 0, 0.280);
+            padding: 8px 10px;
+          }
+
+          button {
+            border: none;
+            color: #FFFFFF;
+            border-radius: 5px;
+            background-color: #303BA6;
+            padding: 8px 20px;
+
+            &:hover {
+              background-color: #3f92c6;
+            }
           }
         }
       }
     }
+  }
 
-    .cards {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      margin-top: 10px;
+  .cards-box {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 
+    margin-top: 60px;
+    gap: 20px;
 
-      .card {
-        width: calc(33.33% - 20px);
-        margin-bottom: 30px;
-        padding: 20px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
+    .card-box {
+      padding: 20px;
+      border-radius: 5px;
 
-        cursor: pointer;
-        transition: 0.2s;
-    
-        &:hover {
-            box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.180);
-        }
+      cursor: pointer;
+      transition: 0.2s;
 
-        .card-header {
-          font-weight: bold;
-          margin-bottom: 10px;
-        }
-      }
-
-      @media (max-width: 1250px) {
-        justify-content: center;
-
-        .card {
-          width: calc(50% - 20px);
-          margin: 10px;
-        }
-      }
-
-      @media (max-width: 900px) {
-        justify-content: center;
-
-        .card {
-          width: calc(100% - 20px);
-        }
+      .card-header {
+        font-weight: bold;
+        margin-bottom: 10px;
       }
     }
+
+    @media screen and (max-width: $breakpoint-desktop) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  .pagination {
+    margin-top: 30px;
+    display: flex;
+    justify-content: end;
   }
 }
