--- a/Client/src/app/sections/appointment/appointment-details/appointment-details.component.scss
+++ b/Client/src/app/sections/appointment/appointment-details/appointment-details.component.scss
@@ -1,6 +1,5 @@
 .content {
     padding: 25px;
-    margin-top: -40px;
 
     .appointments {
         .action {
@@ -56,6 +55,8 @@
 
         h2 {
             margin-bottom: 25px;
+            font-family: 'montserrat', sans-serif;
+            font-weight: 500;
         }
     }
 }
