--- a/Client/src/app/sections/blood-test/blood-test-details/blood-test-details.component.scss
+++ b/Client/src/app/sections/blood-test/blood-test-details/blood-test-details.component.scss
@@ -1,6 +1,5 @@
 .content {
     padding: 25px;
-    margin-top: -40px;
 
     .bloodTests {
         .action {
@@ -37,6 +36,7 @@
                         background-color: #0bc43f;
                     }
                 }
+                
             }
 
             .back {
@@ -56,6 +56,8 @@
 
         h2 {
             margin-bottom: 25px;
+            font-weight: 500;
+            font-family: 'montserrat', sans-serif;
         }
     }
 }
