--- a/Client/src/app/sections/physical-examination/physical-examination.component.scss
+++ b/Client/src/app/sections/physical-examination/physical-examination.component.scss
@@ -1,6 +1,5 @@
 .content {
     padding: 25px;
-    margin-top: -40px;
 
     .physical-examination {
         .action {
@@ -23,6 +22,8 @@
 
         h2 {
             margin-bottom: 25px;
+            font-weight: 500;
+            font-family: 'montserrat', sans-serif;
         }
 
         .table-wrapper {
