--- a/Client/src/app/shared/pagination/pagination.component.html
+++ b/Client/src/app/shared/pagination/pagination.component.html
@@ -11,3 +11,17 @@
       class="pagination"
 >
 </pagination>
+
+<!-- <mat-paginator
+  *ngIf="totalCount && pageSize"
+  [length]="totalCount"
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[10, 25, 50, 100]"
+  (page)="onPaginationChanged($event)"
+  showFirstLastButtons
+  previousPageLabel="&lsaquo;"
+  nextPageLabel="&rsaquo;"
+  firstPageLabel="&laquo;"
+  lastPageLabel="&raquo;"
+>
+</mat-paginator> -->
