--- a/Client/src/app/core/nav-bar-docheader/nav-bar-docheader.component.scss
+++ b/Client/src/app/core/nav-bar-docheader/nav-bar-docheader.component.scss
@@ -12,6 +12,10 @@ mat-toolbar {
     a {
         text-decoration: none;
         font-size: 16px;
+
+        &:hover {
+            color: #565656;
+        }
     }
 
     li {
