--- a/Client/src/app/sections/appointment/appointment.component.scss
+++ b/Client/src/app/sections/appointment/appointment.component.scss
@@ -26,6 +26,10 @@
             font-family: 'montserrat', sans-serif;
         }
 
+        table {
+            width: 100%;
+        }
+
         table.table-hover {
             tbody tr:hover {
                 background-color: #f3f3f3;
