--- a/Client/src/app/appointment/appointment.component.html
+++ b/Client/src/app/appointment/appointment.component.html
@@ -1,4 +1,4 @@
-<div class="content-main">
+<!-- <div class="content-main">
 
     <div class="header">
   
@@ -10,4 +10,4 @@
         <h1>Hola</h1>
     </div>
    
-  </div>
+  </div> -->
