--- a/Client/src/app/appointment/appointment.component.scss
+++ b/Client/src/app/appointment/appointment.component.scss
@@ -1,14 +1,16 @@
-$breakpoint-desktop: 1300px;
-$breakpoint-tablet: 970px;
-$breakpoint-mobile: 480px;
+// $breakpoint-desktop: 1300px;
+// $breakpoint-tablet: 970px;
+// $breakpoint-mobile: 480px;
 
-.content-main {
-    // height: 100vh;
+// .content-main {
+//     // height: 100vh;
 
-    .header {
-        background-color: #FFFFFF;
-        padding: 20px;
-        box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+//     .header {
+//         background-color: #FFFFFF;
+//         padding: 20px;
+//         box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 
-    }
-}
+//     }
+// }
+
+/* Añade estilos personalizados según tus preferencias */
