--- a/Client/src/app/appointment/appointment-item/appointment-item.component.html
+++ b/Client/src/app/appointment/appointment-item/appointment-item.component.html
@@ -1,1 +1,14 @@
-<p>appointment-item works!</p>
+<mat-card *ngIf="appointmet" routerLink="/appointments/{{appointmet.id}}">
+  <mat-card-header>
+    <mat-card-title>{{appointmet.patient}}</mat-card-title>
+    <mat-card-subtitle>Patient</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p><strong>Date: </strong>{{appointmet.date | date}} {{appointmet.time}}</p>
+    <mat-card-subtitle>Click For More Details</mat-card-subtitle>
+    <div class="status">
+      <strong>Status: </strong> <p class="pending"> Pending</p>
+    </div>
+
+  </mat-card-content>
+</mat-card>
