--- a/Client/src/app/appointment/appointment.component.html
+++ b/Client/src/app/appointment/appointment.component.html
@@ -1,4 +1,3 @@
-
 <div class="content-main">
 
     <div class="header">
@@ -7,24 +6,22 @@
         </div>
 
         <div class="box filtering">
-            <app-paging-header 
-            [totalCount]="totalCount"
-            [pageNumber]="appointmentParams.pageNumber"
-            [pageSize]="appointmentParams.pageSize"
-            ></app-paging-header>
+            <app-paging-header [totalCount]="totalCount" [pageNumber]="appointmentParams.pageNumber"
+                [pageSize]="appointmentParams.pageSize"></app-paging-header>
 
             <div class="box-search">
                 <div class="select">
-                    <select class="select" (change)="onSortSelected($event)">
+                    <select (change)="onSortSelected($event)">
                         <option *ngFor="let sort of sortOptions" [value]="sort.value">
-                        {{sort.name}}
+                            {{sort.name}}
                         </option>
                     </select>
+                    <button (click)="togglePopup()" class="filter bi bi-filter p-2">Filter</button>
                 </div>
 
                 <div class="search">
                     <input (keyup.enter)="onSearch()" type="text" class="" #search>
-                    <button class="" (click)="onSearch()">Search</button>
+                    <button (click)="onSearch()">Search</button>
                 </div>
             </div>
         </div>
@@ -39,11 +36,25 @@
         </div>
     </div>
     <div class="pagination" *ngIf="totalCount > 0">
-        <app-pagination
-        [totalCount]="totalCount" 
-        [pageSize]="appointmentParams.pageSize"
-        (pageChanged)="onPageChanged($event)"
-        ></app-pagination>
+        <app-pagination [totalCount]="totalCount" [pageSize]="appointmentParams.pageSize"
+            (pageChanged)="onPageChanged($event)"></app-pagination>
     </div>
 
+</div>
+
+
+
+<div *ngIf="showPopup" class="popup-overlay" (click)="closePopup()">
+    <div class="popup-content" (click)="stopPropagation($event)">
+        <div class="box">
+            <h5 class="">Status</h5>
+            <ul class="">
+                <li class="" *ngFor="let appointmentsStatus of appointmentsStatuses">
+                    <input type="checkbox" [checked]="appointmentsStatus.id === appointmentParams.appointmentStatusId"
+                        [value]="appointmentsStatus.id" (change)="onAppointmentStatusSelected(appointmentsStatus.id)">
+                    {{ appointmentsStatus.appointmentStatusName }}
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
