--- a/Client/src/app/appointment/appointment.component.scss
+++ b/Client/src/app/appointment/appointment.component.scss
@@ -1,4 +1,3 @@
-
 $breakpoint-desktop: 1300px;
 $breakpoint-tablet: 1170px;
 $breakpoint-mobile: 480px;
@@ -45,6 +44,7 @@ $breakpoint-mobile: 480px;
             background-color: #ffffff;
             appearance: none;
             cursor: pointer;
+            margin-right: 10px;
           }
         }
 
@@ -62,17 +62,16 @@ $breakpoint-mobile: 480px;
             border: 1px solid rgba(0, 0, 0, 0.280);
             padding: 8px 10px;
           }
+        }
+        button {
+          border: none;
+          color: #FFFFFF;
+          border-radius: 5px;
+          background-color: #303BA6;
+          padding: 8px 20px;
 
-          button {
-            border: none;
-            color: #FFFFFF;
-            border-radius: 5px;
-            background-color: #303BA6;
-            padding: 8px 20px;
-
-            &:hover {
-              background-color: #3846c8;
-            }
+          &:hover {
+            background-color: #3846c8;
           }
         }
       }
@@ -110,10 +109,6 @@ $breakpoint-mobile: 480px;
       }
     }
 
-    // @media screen and (max-width: $breakpoint-desktop) {
-    //   grid-template-columns: repeat(2, 1fr);
-    // }
-
     @media screen and (max-width: $breakpoint-tablet) {
       grid-template-columns: 1fr;
     }
@@ -122,5 +117,56 @@ $breakpoint-mobile: 480px;
   .pagination {
     margin-top: 30px;
     padding: 20px;
+  }
+}
+
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+
+  .popup-content {
+    background-color: #fff;
+    padding: 20px;
+    max-width: 80%;
+    max-height: 80%;
+    overflow-y: auto;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    display: flex;
+    gap: 30px;
+
+    .box {
+      margin-bottom: 20px;
+
+      h5 {
+        font-size: 1.2rem;
+        margin-bottom: 10px;
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+
+        li {
+          display: flex;
+          align-items: center;
+          margin-bottom: 8px;
+
+          input {
+            margin-right: 8px;
+          }
+        }
+      }
+    }
   }
 }
