--- a/Client/src/app/appointment/date-picker/date-picker.component.scss
+++ b/Client/src/app/appointment/date-picker/date-picker.component.scss
@@ -1,19 +1,26 @@
-button {
-    // margin: 5px;
-    font-size: 20px;
-    transition: 0.2s;
-    background-color: #fff;
-    color: #525252;
-    // border: 1px solid #525252;
-    border: none;
-    border-radius: 10px;
+.date-picker {
+    display: flex;
+    align-items: center;
 
-    &:hover {
-        font-size: 23px;
-        color: #323232;
+    @media (max-width: 680px) {
+        display: flex;
+        flex-direction: column;
+      }
+    button {
+        font-size: 20px;
+        transition: 0.2s;
+        background-color: #fff;
+        color: #525252;
+        border: none;
+        border-radius: 10px;
+
+        &:hover {
+            font-size: 23px;
+            color: #323232;
+        }
     }
-}
 
-span {
-    font-size: 17px;
+    span {
+        font-size: 17px;
+    }
 }
